fixing broken CSS in homepage

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -102,13 +102,27 @@ body {
   margin-left: 10rem;
 }
 
-@media (max-width: 1024px) {
-  .containerlibrary{  
+.home-container {
   display: flex;
- flex-direction: column;
- align-items: center;
- margin: 0 auto;
- margin-bottom: 4rem; 
-}
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: flex-start;
 }
 
+@media screen and (max-width: 1024px) {
+  .containerlibrary {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    margin-bottom: 4rem;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .home-container {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+}
